--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
+    "@rails/webpacker": "^5.4.0",
+    "node-sass": "^6.0.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
